# OrbitTerm-Client

./: .gitignore  project.yml  release_note.txt
OrbitTerm.xcodeproj/: project.pbxproj
OrbitTerm.xcodeproj/xcshareddata/xcschemes/: OrbitTerm_iOS.xcscheme  OrbitTerm_macOS.xcscheme
OrbitTerm/App/: ContentView.swift  OrbitTermApp.swift
OrbitTerm/CBridge/: OrbitTerm-Bridging-Header.h  orbit_core.h
OrbitTerm/Core/: AppSession.swift  CredentialVault.swift  DockerService.swift  FileSizeFormatter.swift  KeychainManager.swift  MonitorService.swift  NetworkService.swift  OrbitManager.swift  SFTPManager.swift  ServerStore.swift  SessionManager.swift  SyncService.swift  TerminalService.swift  View+InputPolish.swift
OrbitTerm/Features/Auth/: AuthView.swift
OrbitTerm/Features/Connection/: ConnectionView.swift
OrbitTerm/Features/Home/: AddServerView.swift  AssetManagerView.swift  DockerManagerView.swift  MainWorkstationView.swift  MonitorDashboardView.swift  SFTPBrowserView.swift  ServerListView.swift  SyncView.swift  TabBarView.swift
OrbitTerm/Features/Security/: MasterPasswordGateView.swift
OrbitTerm/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
orbit-core/: Cargo.toml
orbit-core/include/: orbit_core.h
orbit-core/src/: lib.rs
scripts/: generate_app_icons.swift  make_release.sh  package_apps.sh  package_client.sh  render_ux_shots.swift
